--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,10 +1,12 @@
 services:
 
   DMP\RestBundle\Listener\SerializeListener:
+    autowire: true
     tags:
       - { name: kernel.event_subscriber }
 
   dmp_rest.serializer.symfony:
+    autowire: true
     class: DMP\RestBundle\Serializer\SymfonySerializerAdapter
     public: false
 
@@ -12,6 +14,7 @@ services:
     class: DMP\RestBundle\Validation\ValidationExceptionFactory
 
   DMP\RestBundle\Listener\ExceptionListener:
+    autowire: true
     arguments:
       $exceptionDTOFactory: '@DMP\RestBundle\Controller\DTO\ExceptionDTOFactory'
       $appEnv: '%env(APP_ENV)%'
