--- a/composer.json
+++ b/composer.json
@@ -7,28 +7,28 @@
     "php": ">=8.1",
     "ext-json": "*",
     "sensio/framework-extra-bundle": "^6.2",
-    "symfony/serializer-pack": "^1.1",
-    "symfony/framework-bundle": "^5.4"
+    "symfony/serializer-pack": "*",
+    "symfony/framework-bundle": "*"
   },
   "require-dev": {
-    "dmp/cg-lib": "^0.1.0",
+    "dmp/cg-lib": "^0.1.1",
     "doctrine/annotations": "^1.13",
     "doctrine/collections": "^1.8",
     "doctrine/common": "^3.4",
     "doctrine/dbal": "^2.13",
+    "doctrine/orm": "^2.13",
     "matthiasnoback/symfony-dependency-injection-test": "^4.3",
     "phpunit/phpunit": "^9.5",
-    "symfony/browser-kit": "^5.4",
-    "symfony/console": "^5.4",
-    "symfony/messenger": "^5.4",
-    "symfony/http-kernel": "^5.4",
-    "symfony/validator": "^5.4",
-    "symfony/routing": "^5.4",
-    "symfony/dependency-injection": "^5.4",
-    "symfony/config": "^5.4",
-    "symfony/options-resolver": "^5.4",
-    "doctrine/orm": "^2.13",
-    "symfony/web-link": "^5.4"
+    "symfony/browser-kit": "*",
+    "symfony/console": "*",
+    "symfony/messenger": "*",
+    "symfony/http-kernel": "*",
+    "symfony/validator": "*",
+    "symfony/routing": "*",
+    "symfony/dependency-injection": "*",
+    "symfony/config": "*",
+    "symfony/options-resolver": "*",
+    "symfony/web-link": "*"
   },
   "autoload": {
     "psr-4": {
@@ -47,7 +47,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": true,
-      "require": "5.4.*"
+      "require": "6.4.*"
     }
   }
 }
